# arctic

./: .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  INSTALL.fink  Makefile.am  README  README.md  accuracy_test.cc  aclocal.m4  arctic_test.sh  checkQuality  configure.ac  default.cte  libtool  myccfits.cc  release_revision.txt  runQC  sonar-project.properties  test-scanner  test_main.sh  test_main_opt.sh
aifa/: arctic_test.sh  arctic_test_dark.sh  arctic_test_euclid.sh  arctic_test_express.sh  arctic_test_fail.sh  arctic_test_fits.sh  arctic_test_pre.sh  arctic_test_pre_check.sh  arctic_test_pre_dark_check.sh  arctic_test_rot.sh  clock_image.sh  clock_test.cte  default_express5_niter6.cte  test_euclid.cte  test_opt.cte
cmake/Modules/: UnitTestHelpers.cmake
cmake/scripts/: createBoostTestMain.py
cmake/scripts/EnvConfig/: Control.py  Control.pyo  TestEnvOps.pyo  TestXMLOps.pyo  Variable.pyo  __init__.py  __init__.pyo  xmlModule.py
doc/: Makefile  make.bat
doc/source/: cmdline.rst  conf.py  conf.py.in  conffile.rst  index.rst
html/: create_html
mysonar/: sonar-project.properties
python/: arctic.i  commands.sh  cte_image.i  cte_image_classic.i  cte_image_neo.i  cte_image_watermark.i  params.i  params_acs.i  params_fits.i  setup.py  test_python.py  test_python2.py  test_valarray.cc  test_valarray.hh
python_acs/: Makefile.am  acs_image.py  arctic_acs.py  arctic_acs.sh  arctic_prg.py  python_wrapper  python_wrapper.in
src/: acs_clock_charge_image.c.idl  arctic.cc  config.h.in  config_cmake.h.in  cte_image.cc  cte_image.cc.buggy  cte_image.cc.good  cte_image.cc.orig  cte_image.hh  cte_image_classic.cc  cte_image_classic.hh  cte_image_euclid.cc  cte_image_euclid.hh  cte_image_neo.cc  cte_image_neo.hh  cte_image_watermark.cc  cte_image_watermark.hh  image.cc  image.hh  image_acs.cc  image_acs.hh  image_base.cc  image_base.hh  image_euclid.cc  image_euclid.hh  image_fits.cc  image_fits.hh  image_slice.cc  image_slice.hh  julian.cc  julian.hh  output.cc  output.hh  params.cc  params.hh  params_acs.cc  params_acs.hh  params_euclid.cc  params_euclid.hh  params_fits.cc  (+4 more)
unittests/: SHE_ArCTIC_image_slice.cc  SHE_ArCTIC_params.cc  SHE_ArCTIC_strstr.cc  a.out  arctic_cte_image.cc  arctic_cte_image_classic.cc  arctic_cte_image_neo.cc  arctic_cte_image_watermark.cc  arctic_image.cc  arctic_image_acs.cc  arctic_image_euclid.cc  arctic_image_fits.cc  arctic_image_slice.cc  arctic_julian.cc  arctic_output.cc  arctic_params.cc  arctic_params_acs.cc  arctic_params_euclid.cc  arctic_params_fits.cc  arctic_strstr.cc  ouput  output  tests.xml  tests.xml.after_xslt
